[gd_scene load_steps=6 format=2]

[ext_resource path="res://script/InfoDisplay.gd" type="Script" id=1]
[ext_resource path="res://font/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 66
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[node name="InfoDisplay" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 538.976 ],
"_edit_vertical_guides_": [ 972.01 ]
}

[node name="LabelMessage" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 720.0
margin_top = 395.0
margin_right = 1200.0
margin_bottom = 459.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Doodle jump"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = 1909.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0 "
align = 2
valign = 1

[node name="StartButton" type="Button" parent="."]
margin_left = 915.0
margin_top = 600.0
margin_right = 1005.0
margin_bottom = 690.0
custom_fonts/font = SubResource( 2 )
text = "â–¶"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ButtonExit" type="Button" parent="."]
margin_right = 55.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "->]"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
